--- a/analyse.html
+++ b/analyse.html
@@ -58,7 +58,7 @@ UA-88674412-1<script>
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="true">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown open"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="true"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html">HOME</a></li><li class="nav-item"><a class="nav-link link" href="wiezijnwe.html">WIE ZIJN WE</a></li><li class="nav-item"><a class="nav-link link" href="vertrekgeluiden.html">VERTREKGELUIDEN</a></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" href="project.html" data-toggle="dropdown-submenu" aria-expanded="false">PROJECT</a><div class="dropdown-menu"><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="inleiding.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>INLEIDING&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="inleiding.html">INLEIDING</a><a class="dropdown-item" href="brainstorm.html">BRAINSTORM</a><a class="dropdown-item" href="analyse.html">ANALYSE</a></div></div><div class="dropdown"><a class="dropdown-item dropdown-toggle" href="ontwerpproces.html" data-toggle="dropdown-submenu" aria-expanded="false"><p>ONTWERPPROCES&nbsp;&nbsp;&nbsp;&nbsp;</p></a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="ontwerpproces.html">ONTWERPPROCES</a><a class="dropdown-item" href="vormenstudie.html">VORMENSTUDIE</a><a class="dropdown-item" href="materialenstudie.html">MATERIALENSTUDIE</a></div></div><a class="dropdown-item" href="eindontwerp.html" aria-expanded="false">EINDONTWERP</a></div></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -71,7 +71,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free mobile web maker software download</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap website maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -161,7 +161,7 @@ UA-88674412-1<script>
     </div>
 </section>
 
-<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-2p" style="background-color: rgb(46, 46, 46); padding-top: 90px; padding-bottom: 90px;">
+<section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-2p" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="mbr-contacts row">
@@ -178,7 +178,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="70wK2Y0Nnawh7mYPnmkC04LqnIM9es5U5K+LcukYn55NfaEADNFqLc08o8KQRB2zSRvZiz4hbtce9IY8BaURjeECNXmmFlcw0AG1qW6LNuv5lVai9CDDynJDVZaSmydF" data-form-email="true">
+                    <input type="hidden" value="Qdew0GvQSVVs67uAS+XDwN8oTpdVAw2s2IxPxg4q4RZgkJxvEt1U6cpxmyo+Eu4l1Npl/bst/+DOyyi4HK3i9gpvMAQQJKgwXq0B/fEyCk4kOmf5ajSkjwmk/BtoIfA+" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
