--- a/analyse.html
+++ b/analyse.html
@@ -25,13 +25,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -40,7 +40,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -71,7 +71,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">easy bootstrap website maker</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">site creator</a></section><section class="mbr-section article mbr-section__container mbr-after-navbar" id="content1-2c" style="background-color: rgb(255, 255, 255); padding-top: 0px; padding-bottom: 0px;">
 
     <div class="container">
         <div class="row">
@@ -178,7 +178,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Qdew0GvQSVVs67uAS+XDwN8oTpdVAw2s2IxPxg4q4RZgkJxvEt1U6cpxmyo+Eu4l1Npl/bst/+DOyyi4HK3i9gpvMAQQJKgwXq0B/fEyCk4kOmf5ajSkjwmk/BtoIfA+" data-form-email="true">
+                    <input type="hidden" value="BWDVjdNMTduqOBEpGXw0Yvf0I3/YLIHyDEOrpiQ3uJ1+56Zy19K3r0UKsaGdDREAxhmPT8SkYp5lqEzcDwLxpmx70eerma9L7NaI7nl6zqucF2k8BBzoXsfpemdfQ/RU" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
