--- a/eindontwerp.html
+++ b/eindontwerp.html
@@ -25,13 +25,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -40,7 +40,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -71,7 +71,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">web site generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1k" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a rel="external" href="https://mobirise.com">best bootstrap site generator</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1k" style="background-color: rgb(255, 255, 255);">
 
     
 
@@ -197,7 +197,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="joA3ky8Q2+GTOCTCVDZesrXHQGkHR0vLjehQI7LAQoDoZ9drKFEXWBIT0COWubc+kgp/8zrHiUxt89szxLYKdG27SWc3wtCt6mFFX/6wQtLFK1+w2+ifQgi5jbUh3YDm" data-form-email="true">
+                    <input type="hidden" value="MaVLKwF8ebICDW7n1Mpulh/hq9QToCU6bekMS+rxQ3vjZ2Izr19lW1wotS5JLvZf7QF6Ic1BNtJvcwwqCIcjLQqfVCvVklAGwjIgjMSkN+mePnPaVu41qLXtQ8XsIsF/" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
