--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -42,7 +42,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile web page maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
+<section class="engine"><a rel="external" href="https://mobirise.com">top offline web page builder software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-after-navbar" id="header5-i" data-bg-video="https://www.youtube.com/embed/_AK4tCz2PF4?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(255, 255, 255);"></div>
 
@@ -229,7 +229,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="vZ1U+qjIdyo6UczhgyH0IwbJ3E1G8XcUokzz/RLNoW65UnbGvZIvooQrqchqAt2w1miPZoPSBJZO+YvGQLa/NMc2HoUkmnVAEsuHatgRijNxYOkf/R4cxoLdEsFqgQWr" data-form-email="true">
+                    <input type="hidden" value="5MIiBt4m5iZW2Kr3Ko0wEHUMuML+tsr+WE/kWw2Z4bYBP10qmp/6+6I+3ofhPKwtOvqZ6ETxTdnFoyicBT73pn8AvkdThPFcCQqUMY5757mdkLFUe/G2h2S5+24ToQVz" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
