--- a/inleiding.html
+++ b/inleiding.html
@@ -27,13 +27,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -42,7 +42,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best html site maker software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best drag and drop web page development software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-1g" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -298,7 +298,7 @@ het bord dat in vele opticiens hangt om ogen te testen. Er werden ook nieuwe zak
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="t70aowOf7l2DU+Oq1+6n6LgCvMSQV7qoR+cuNQTCHVOHDVfXqC8knhBqAXdmxERSKG8RE/4tecNsZRAloL7ovIsLzuCj1R0WvIeF8eEByrT/O/ex38w3E4N3nUw/jYBJ" data-form-email="true">
+                    <input type="hidden" value="kRG7xIeiC2InlK93WLyNhN2HE4mLtl8qzAnjUAYScFTf4R+OnMY7wo4a+efhjocu71lG5E+yaKBICVn5UNWra3TmfttzkaqDbJfRlQiYZpCaKqWQdVvzSy1L1nM09Jq5" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
