--- a/project.html
+++ b/project.html
@@ -25,13 +25,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -40,7 +40,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -71,7 +71,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free responsive web site maker software</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free drag and drop web site maker</a></section><section class="mbr-section mbr-after-navbar" id="msg-box5-d" style="background-color: rgb(255, 255, 255); padding-top: 200px; padding-bottom: 120px;">
 
     
     <div class="container">
@@ -122,7 +122,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="XO0DzjmRm5TTRcvmhKE3UR+lRyuNM0RH6wxlhMRLCtD9H7JHO4cDJaEDGEX45QQK3bUpnwGKU257F+8qijRhpnDrJLgnZG/ZoylHaZL0MSJ2XLqHYpMHxAmt6fJ7bjCg" data-form-email="true">
+                    <input type="hidden" value="XIEv13hED3XgGv2lN3xVTdIrHAsPGHlAOaogeFS8RvT1ZxjtHBBWJI4npKHrLZi0nEKr/PlPfPEUxf7li5Z6MvdBsePc+1y3OdiG0gbYQWqTd+P64ogXq6UzHdqV8OfR" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
