--- a/vertrekgeluiden.html
+++ b/vertrekgeluiden.html
@@ -27,13 +27,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -42,7 +42,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -73,7 +73,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free bootstrap web page creator software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2j" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">easy responsive web site building software download</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2j" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -271,7 +271,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LX9Cu+jXb0KcTg6IFIy6bP58lVWfX1n42yBWmd9dsR5jdU+Vt2mZ1aw+JGwCO9JukAB06Z06LyspT0oP0z1TIb8zpHAStBRgDtr9eRvom7QBnH34zK3RhuyCuxCbBAE+" data-form-email="true">
+                    <input type="hidden" value="fyimw0E6Jgm7x9ZkBYHx+ZiHSSyEkoSfmeJQ5e+28/p1zeGVHO7zVIMKIA+9cudOghw07b2+geHONkAllrwJJ8FMZo/CmWu5D3DcLse1PrR9r/ZYUn1WJfene+gipShB" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
