--- a/wiezijnwe.html
+++ b/wiezijnwe.html
@@ -25,13 +25,13 @@
 <body>
 
 <!-- Google Analytics -->
-UA-88674412-1<script>
+<script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
   m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
   })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-  ga('create', 'UA-88674412-1', 'auto');
+  ga('create', 'UA-88674412-1, 'auto');
   ga('send', 'pageview');
 
 </script>
@@ -40,7 +40,7 @@ UA-88674412-1<script>
 
 <section id="ext_menu-4">
 
-    <nav class="navbar navbar-dropdown navbar-fixed-top">
+    <nav class="navbar navbar-dropdown bg-color transparent navbar-fixed-top">
         <div class="container">
 
             <div class="mbr-table">
@@ -71,7 +71,7 @@ UA-88674412-1<script>
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top offline site maker</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">free drag and drop web site development</a></section><section class="mbr-section mbr-section__container article mbr-after-navbar" id="header3-2k" style="background-color: rgb(255, 255, 255); padding-top: 140px; padding-bottom: 20px;">
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
@@ -161,7 +161,7 @@ UA-88674412-1<script>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TWkuAS3hIr3RkWplE9YaSBYKffUTxs12iSzEKhAeywUxVxXfJJJ3+mmOTKVo3S6Fn/FtCvFQ/ih5bYf95wxsqrS3jhQ6YFLQ7bGccHboNnwhAwgurwoGXwUwqWI7elnQ" data-form-email="true">
+                    <input type="hidden" value="Gkwer6oV7j7su3kBmM+mt8WxWRr7X9Cs1/ENYhp49k++ZUjeCs/ZfXgBuQFVg9aeYTMIAw3OhU1yA5AgYkpyhSD0Ug/hrChUy0qp96uz/JsN/wWPG5jp9387eAskJlSv" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-2p-email">Email<span class="form-asterisk">*</span></label>
